--- a/.env_example
+++ b/.env_example
@@ -1,8 +1,8 @@
 # Set user-defined variables
-DOMAIN_NAME="yourdomain.com"
+DOMAIN_NAME="example.com"
 
 # email used for letsencrypt
-EMAIL="admin@yourdomain.com"
+EMAIL="admin@example.com"
 
 # the name of your site
 SITE_NAME="userfrosting"
@@ -18,6 +18,20 @@ EXE_SQL="true"
 
 # MySQL Database setup values
 MYSQL_ROOT_PASSWORD="userfrosting"
+DB_CONNECTION="mysql"
+DB_HOST="localhost"
+DB_PORT="3306"
 DB_NAME="userfrosting"
 DB_USER="userfrosting"
 DB_PASSWORD="userfrosting"
+
+# SMTP Settings
+MAIL_MAILER="smtp"
+SMTP_HOST="host.example.com"
+SMTP_USER="relay@example.com"
+SMTP_PASSWORD="password"
+SMTP_PORT="587"
+SMTP_AUTH="true"
+SMTP_SECURE="tls"
+MAIL_FROM_ADDRESS="noreply@example.com"
+MAIL_FROM_NAME="Site Administrator"
