--- a/.env_example
+++ b/.env_example
@@ -25,7 +25,7 @@ DB_NAME="userfrosting"
 DB_USER="userfrosting"
 DB_PASSWORD="userfrosting"
 
-# SMTP Settings
+# Email Settings
 MAIL_MAILER="smtp"
 SMTP_HOST="host.example.com"
 SMTP_USER="relay@example.com"
