--- a/.env_example
+++ b/.env_example
@@ -35,3 +35,9 @@ SMTP_AUTH="true"
 SMTP_SECURE="tls"
 MAIL_FROM_ADDRESS="noreply@example.com"
 MAIL_FROM_NAME="Site Administrator"
+
+UF_ADMIN_USER="admin"
+UF_ADMIN_EMAIL="$example@email.com"
+UF_ADMIN_PASSWORD="password"
+UF_ADMIN_FIRST_NAME="Admin"
+UF_ADMIN_LAST_NAME="User"
