--- a/.env_example
+++ b/.env_example
@@ -37,7 +37,7 @@ MAIL_FROM_ADDRESS="noreply@example.com"
 MAIL_FROM_NAME="Site Administrator"
 
 UF_ADMIN_USER="admin"
-UF_ADMIN_EMAIL="$example@email.com"
+UF_ADMIN_EMAIL="example@email.com"
 UF_ADMIN_PASSWORD="password"
 UF_ADMIN_FIRST_NAME="Admin"
 UF_ADMIN_LAST_NAME="User"
