--- a/.env_example
+++ b/.env_example
@@ -1,8 +1,7 @@
 # Set user-defined variables
 DOMAIN_NAME="example.com"
 
-# email used for letsencrypt
-EMAIL="admin@example.com"
+
 
 # the name of your site
 SITE_NAME="userfrosting"
@@ -12,6 +11,9 @@ USERFROSTING_VERSION="^5.1"
 
 ## What repo to download UF from
 GIT_REPO="userfrosting/UserFrosting"
+
+# Set Userfrosting Mode
+UF_MODE="debug"
 
 # Execute MySQL Set up
 EXE_SQL="true"
@@ -35,6 +37,9 @@ SMTP_AUTH="true"
 SMTP_SECURE="tls"
 MAIL_FROM_ADDRESS="noreply@example.com"
 MAIL_FROM_NAME="Site Administrator"
+
+# email used for letsencrypt
+EMAIL="admin@example.com"
 
 UF_ADMIN_USER="admin"
 UF_ADMIN_EMAIL="example@email.com"
