--- a/.env_example
+++ b/.env_example
@@ -15,6 +15,9 @@ GIT_REPO="userfrosting/UserFrosting"
 # Set Userfrosting Mode
 UF_MODE="debug"
 
+#Import dump file
+IMPORT_DUMP="false"
+
 # Execute MySQL Set up
 EXE_SQL="true"
 
