--- a/.env_example
+++ b/.env_example
@@ -1,25 +1,19 @@
 # Set user-defined variables
-DOMAIN_NAME="example.com"
 
-
-
-# the name of your site
+# The name of your site
 SITE_NAME="userfrosting"
 
-# what version of UF to install
-USERFROSTING_VERSION="^5.1"
+# The domain that this site will use.
+DOMAIN_NAME="example.com"
+
+# Email used for Let's Encrypt. Must match the domain set above
+EMAIL="admin@example.com"
+
+# What version of UF to install
+~~~USERFROSTING_VERSION="^5.1"~~~
 
 ## What repo to download UF from
 GIT_REPO="userfrosting/UserFrosting"
-
-# Set Userfrosting Mode
-UF_MODE="debug"
-
-#Import dump file
-IMPORT_DUMP="false"
-
-# Execute MySQL Set up
-EXE_SQL="true"
 
 # MySQL Database setup values
 MYSQL_ROOT_PASSWORD="userfrosting"
@@ -41,11 +35,26 @@ SMTP_SECURE="tls"
 MAIL_FROM_ADDRESS="noreply@example.com"
 MAIL_FROM_NAME="Site Administrator"
 
-# email used for letsencrypt
-EMAIL="admin@example.com"
 
+
+# Userfrosting admin user settings
 UF_ADMIN_USER="admin"
 UF_ADMIN_EMAIL="example@email.com"
 UF_ADMIN_PASSWORD="password"
 UF_ADMIN_FIRST_NAME="Admin"
 UF_ADMIN_LAST_NAME="User"
+
+
+# Script Execution Options
+# these have an impact on what parts of the script will be executed.
+
+# Execute MySQL install and set up. Default true. Set falsue to skip MySQL install.
+EXE_SQL="true"
+
+# Set Userfrosting Mode: Set how UF will run. Default: debug
+UF_MODE="debug"
+
+# Import dump file: Set true to import a mysql database dump file.
+# Setting true will cause the script to skip UF database and admin user setup steps.
+IMPORT_DUMP="false"
+
