--- a/.env_example
+++ b/.env_example
@@ -43,7 +43,7 @@ UF_ADMIN_LAST_NAME="User"
 # Script Execution Options
 # these have an impact on what parts of the script will be executed.
 
-# Execute MySQL install and set up. Default true. Set falsue to skip MySQL install.
+# Execute MySQL install and set up. Default true. Set false to skip MySQL install.
 EXE_SQL="true"
 
 # Set Userfrosting Mode: Set how UF will run. Default: debug
